--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/jpeg" href="/favicon.jpg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
@@ -34,7 +36,7 @@
       property="og:description"
       content="A web-based OS experience, made with Cursor"
     />
-    <meta property="og:image" content="https://os.ryo.lu/icons/mac-512.png" />
+    <meta property="og:image" content="https://os.ryo.lu/icons/favicon-512.png" />
     <meta property="og:site_name" content="ryOS" />
 
     <!-- Twitter Card -->
@@ -46,7 +48,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://os.ryo.lu/icons/mac-512.png"
+      content="https://os.ryo.lu/icons/favicon-512.png"
     />
 
     <title>ryOS</title>
