Fix pusher-beams API: add vercel.json config and improve error handling

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     />
 
     <title>noraOS</title>
+    <!-- Pusher Beams SDK -->
+    <script src="https://js.pusher.com/beams/2.1.0/push-notifications-cdn.js"></script>
   </head>
   <body style="background-color: black">
     <div id="root"></div>
